# tennis

./: .gitignore  .golangci.yml  .goreleaser.yaml  .goreleaser.yml  .justfile  .mise.toml  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  RELEASE.md  autolayout.go  build.zig  build.zig.zon  color_string.go  go.mod  go.sum  helpers_test.go  justfile  layout.go  layout_test.go  main.go  mise.toml  render.go  render_test.go  snap.sh  styles.go  styles_test.go  table.go  table_test.go  tailwind.go  tennis.1.scd  tennis.go  theme_string.go  util.go  util_test.go
Casks/: tennis.rb
cli/: Cargo.toml  build.rs
cli/src/: args.rs  completion.rs  error.rs  main.rs  natsort.rs  peek.rs  util.rs
cli/src/input/: csv.rs  detect.rs  json.rs  mod.rs  sniffer.rs  sqlite.rs
cli/src/templates/: completion.bash  completion.zsh
cmd/: banner.go  cli_test.go  main.go  main_test.go  options.go  options_test.go  test_helpers.go
completions/: _tennis  tennis.bash  tennis.fish
docs/: demo.tape  star_wars.csv
examples/: derive.rs  resize.rs
extra/: _tennis  screenshot.tape  tennis.1  tennis.bash  tennis.scd
snaps/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt
src/: ansi.zig  app.zig  args.zig  border.rs  border.zig  borders.zig  color.zig  color_scale.rs  column.rs  column.zig  completion.zig  context.rs  csv.zig  data.zig  detect.zig  doomicode.zig  env.zig  failure.zig  float.zig  format.zig  grid.rs  infer.rs  int.zig  json.zig  json_to_string.zig  layout.zig  lib.rs  main.zig  natsort.zig  number.rs  peek.zig  percent.zig  render.zig  replay.zig  resolved.rs  (+14 more)
(+57 files in other folders)
